--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ html {
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
@@ -9706,7 +9707,7 @@ body {
   height: 400px;    /* Fixed height for uniformity */
   display: flex;
   flex-direction: column;
-  background-color: var(--yellow);
+  background-color:  #ffc107;
  
 }
 
